fix small bugs - make choice required, fix error messages not showing, rewrite sign up error wording, uncheck event after becomes full, add disabled javascript information

--- a/style.css
+++ b/style.css
@@ -282,6 +282,19 @@ input:disabled+label {
     grid-column-start: span 2;
 }
 
+noscript {
+    position: absolute;
+    padding: 20px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.95);
+    z-index: 1000;
+    display: grid;
+    place-items: center;
+}
+
 @media screen and (max-width: 600px) {
     #form-fieldset {
         grid-template-columns: repeat(1, minmax(0, max-content));
